--- a/templates/emails/register.html.twig
+++ b/templates/emails/register.html.twig
@@ -114,8 +114,8 @@
         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
           <tr>
             <td align="center" valign="top" style="padding: 36px 24px;">
-              <a href="https://www.blogdesire.com" target="_blank" style="display: inline-block;">
-                <img src="https://balade-parfumee.xyz/static/media/textLogoBaladeParfume.b136fdd910efa62388e5.png" alt="Logo" border="0" width="168" style="display: block; width: 168px;">
+              <a href="https://balade-parfumee.xyz" target="_blank" style="display: inline-block;">
+                <img src="https://balade-parfumee.xyz/static/media/textLogoBaladeParfume.b136fdd910efa62388e5.png" alt="Logo" border="0" width="168"  style="display: block; width: 168px;">
               </a>
             </td>
           </tr>
@@ -140,7 +140,7 @@
         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
           <tr>
             <td align="left" bgcolor="#ffffff" style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
-              <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Plus qu’une étape pour finaliser votre inscription</h1>
+              <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Plus qu’une étape pour finaliser votre inscription au carnet olfactif digital</h1>
             </td>
           </tr>
         </table>
@@ -167,7 +167,10 @@
           <tr>
             <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
               <p style="margin: 0;">
-              Veuillez confirmer votre adresse e-mail en utilisant le code de confirmation reçu dans cet e-mail. Cette étape ajoute une sécurité supplémentaire à votre compte en vérifiant que vous possédez bien cette adresse e-mail.
+              Cher/Chère perfumista, <br/><br/>
+              Voici votre code de confirmation pour finaliser votre inscription et commencer sans plus tarder à explorer le carnet olfactif digital ! <br/><br/>
+              À bientôt <br/><br/>
+              Carnet olfactif digital by Balades Parfumées
               </p>
             </td>
           </tr>
@@ -205,7 +208,7 @@
           <!-- start copy -->
           <tr>
             <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
-              <p style="margin: 0;">À bientôt !<br> 🌸</p>
+             {#  <p style="margin: 0;">À bientôt !<br> 🌸</p> #}
             </td>
           </tr>
           <!-- end copy -->
